Notifications tooltip should be full width on mobile (https://github.com/FrontEnd-ro/frontend.ro/issues/789)

--- a/client/components/Header/Header.module.scss
+++ b/client/components/Header/Header.module.scss
@@ -192,7 +192,11 @@ header.header-menu-open .mobile-menu {
 }
 
 @media screen and (max-width: 500px) {
-  .notification-tooltip {
-    right: -10em !important;
+  .header .NotificationTooltip {
+    position: fixed;
+    right: 0;
+    left: 0;
+    width: 100%;
+    top: $app-header-height;
   }
 }
